--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ body {
 }
 
 .cbox .c1 {
+    overflow: hidden;
+    border-radius: 50%;
     width: 1450px;
     height: 1450px;
     position: absolute;
@@ -38,24 +40,31 @@ body {
     position: absolute;
     top: -30%;
     left: -13%;
-    animation: c2 5s linear .5s infinite;
-    animation-play-state: running;
-    box-shadow: 0 0 10px 0px black;
+    overflow: hidden;
+}
+
+.cbox .c2 img {
     border-radius: 50%;
-    background: url(../images/circle2.png);
+    animation: c2 8s linear .5s infinite;
+    animation-play-state: running;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 @keyframes c2 {
     0% {
+        border-radius: 50%;
         transform: rotate(0deg);
     }
 
     100% {
+        border-radius: 50%;
         transform: rotate(-360deg);
     }
 }
 
-.c2.stop {
+.c2 img.stop {
     animation-play-state: paused;
 }
 
@@ -64,6 +73,10 @@ body {
     top: 22%;
     right: 10%;
     color: #fff;
+}
+
+.menu .box {
+    margin: 10% 0;
 }
 
 .one {
@@ -102,14 +115,10 @@ body {
     transition: all 1s;
 }
 
-.one:nth-child(2) {
-    margin: 10% 0;
-}
-
 .sun {
     width: 1000px;
     position: absolute;
-    top: 29.2%;
+    top: 32%;
     right: 0;
     z-index: -1;
 }
@@ -118,102 +127,106 @@ body {
     margin: 15% 0;
 }
 
-.fade {
-    position: relative;
-}
-
 /* main1 */
-.main1 .container {
-    background-color: #fff;
-    padding: 16% 2% 3% 2%;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
-    border-radius: 0 0 20px;
-}
-
-.main1 .container .tool {
-    width: 100%;
-    height: 100%;
-}
-
-.main1 .container .tool img {
-    margin: 3%;
-    width: 13%;
-}
-
-/* main2 */
-
-.main2 {
-    position: absolute;
-    top: 5%;
-    right: 10%;
-    background-color: #fff;
-    width: 800px;
-    border-radius: 20px;
-    padding: 3% 0 5% 5%;
-    z-index: 3;
-    box-shadow: 0 0 10px 0px rgb(0, 0, 0);
-}
-
-.main2 h1 {
-    text-align: center;
-    margin: 0 63% 10% 0;
-}
-
-.main2 .profile {
-    height: 350px;
-}
-
-.main2 .profile .text {
+.fade {
+    margin-top: 50px;
     position: relative;
+    height: 800px;
 }
 
-.name {
+.main1 {
     position: absolute;
     top: 0;
-    left: 40%;
-    font-size: 1.5rem;
+    right: 10%;
+    background-color: #fff;
+    text-align: center;
+    width: 500px;
+    height: 800px;
+    border-radius: 20px;
 }
 
-.i {
-    width: 250px;
-    height: 350px;
-    border-radius: 50%;
+.main1 h1 {
+    margin-top: 50px;
+}
+
+.main1 .i {
     background-color: skyblue;
+    width: 300px;
+    height: 400px;
+    border-radius: 50%;
+    margin: 50px auto;
+}
+
+.main1 .text {
+    width: 100%;
+    height: 20%;
 }
 
 .con {
-    position: absolute;
-    bottom: 0;
-    left: 40%;
+    margin-top: 5%;
+    position: relative;
+    text-align: left;
 }
 
 .con h4 {
-    margin-top: 8%;
+    margin-bottom: 0px;
 }
 
+.con .b {
+    position: absolute;
+    top: 0;
+    left: 20%;
+    text-align: left;
+}
+
+.con .s {
+    position: absolute;
+    top: 0;
+    right: 20%;
+    text-align: left;
+}
+
+.main2 {
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    text-align: center;
+    width: 600px;
+    height: 350px;
+    border-radius: 20px;
+}
+
+.main2 .tool {
+    position: relative;
+}
+
+.main2 .tool .is img {
+    margin: 10px;
+}
+
+.main2 .tool h1 {
+    margin: 60px auto;
+}
+
+
 .line {
-    margin-top: 15%;
-    border-top: 2px solid #fff;
-    border-bottom: 2px solid #fff;
-    transition: all 1s;
+    margin-top: 10%;
+    border: 2px solid #fff;
+    height: 100px;
 }
 
 .line h1 {
     font-size: 2rem;
     color: #fff;
-    margin: 1%;
     text-align: center;
+    line-height: 100px;
 }
 
 /* main3 */
 
 .main3 {
-    margin-top: 20%;
+    margin-top: 25%;
     width: 100%;
     height: 1000px;
     position: relative;
@@ -224,7 +237,7 @@ body {
 
 .main3 h1 {
     position: absolute;
-    top: -15%;
+    top: -10%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -243,19 +256,127 @@ body {
 }
 
 .main3 .box {
-    width: 30%;
-    height: 50%;
+    width: 400px;
+    height: 350px;
     border-radius: 20px;
     margin: 1%;
     border: 2px solid #fff;
+    overflow: hidden;
+}
+
+.main3 .box .black {
+    position: relative;
+    transition: all 1s;
+}
+
+.main4 .box .black {
+    position: relative;
+}
+
+.main5 .box .black {
+    position: relative;
+}
+
+.main3 .box .black h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    opacity: 0;
+    color: #fff;
+}
+
+.main4 .box .black h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    opacity: 0;
+    color: #fff;
+}
+
+.main5 .box .black h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    opacity: 0;
+    color: #fff;
+    opacity: 100%;
+}
+
+.main3 .box:hover .black h1 {
+    opacity: 1;
+    animation: bh1 .5s;
+    opacity: 100%;
+}
+
+.main4 .box:hover .black h1 {
+    opacity: 1;
+    animation: bh1 .5s;
+    opacity: 100%;
+}
+
+.main5 .box .black h1 {
+    opacity: 0;
+}
+
+.main5 .box:hover .black h1 {
+    opacity: 1;
+    animation: bh1 .5s;
+    opacity: 100%;
+}
+
+.main3 .box:hover .black {
+    background-color: black;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    opacity: 80%;
+    animation: bl .5s;
+}
+
+.main4 .box:hover .black {
+    background-color: black;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    opacity: 80%;
+    animation: bl .5s;
+}
+
+.main5 .box:hover .black {
+    background-color: black;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    opacity: 80%;
+    animation: bl .5s;
+}
+
+@keyframes bl {
+    0% {
+        height: 0%;
+    }
+
+    100% {
+        height: 100%;
+    }
 }
 
 .main3 .box a {
     display: block;
     width: 100%;
     height: 100%;
-    
+
 }
+
 .main3 .box:nth-child(1) {
     background: url(../images/d1.jpg) center/ cover;
 }
@@ -307,7 +428,7 @@ body {
 
 .main4 h1 {
     position: absolute;
-    top: -15%;
+    top: -10%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -326,17 +447,20 @@ body {
 }
 
 .main4 .box {
-    width: 30%;
-    height: 50%;
+    width: 400px;
+    height: 350px;
     border-radius: 20px;
     margin: 1%;
     border: 2px solid #fff;
+    overflow: hidden;
 }
+
 .main4 .box a {
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .main4 h3 {
     position: absolute;
     bottom: 10%;
@@ -396,7 +520,7 @@ body {
 
 .main5 h1 {
     position: absolute;
-    top: -15%;
+    top: -10%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -415,17 +539,20 @@ body {
 }
 
 .main5 .box {
-    width: 30%;
-    height: 50%;
+    width: 400px;
+    height: 350px;
     border-radius: 20px;
     margin: 1%;
     border: 2px solid #fff;
+    overflow: hidden;
 }
+
 .main5 .box a {
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .main5 h3 {
     position: absolute;
     bottom: 10%;
